# flutter-aubio-tuner

./: .metadata  README.md  local.properties  pubspec.yaml
android/app/: Android.mk  build.gradle  libaubio
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/ofthewolf/aubiotuner/: FlutterStreamHandler.kt  MainActivity.kt
ios/: Podfile  libaubio
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lib/: aubio.dart  main.dart  web_aubio.dart
libaubio/: CMakeLists.txt  aubio_jni_bindings.c  aubiopitch.c  aubiopitch.h  config.h
libaubio/include/: aubio.h
linux/: CMakeLists.txt  my_application.cc
macos/Runner/: Info.plist  MainFlutterWindow.swift  Runner-Bridging-Header.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: app.js  index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
